closes #5 - fixed selected results not removed from suggestion list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/typeahead.js/dist/typeahead.jquery.min.js"></script>
-    <script src="./dist/typeio.js"></script>
+    <script src="./src/typeio.js"></script>
     <link rel="stylesheet" href="./dist/assets/styles/typeio-styles.css" media="screen"/>
 
     <script type="text/javascript">
