--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         }
                     });
 
-            $('#inputCountries').typeIO({
+            var countriesTypeIO = $('#inputCountries').typeIO({
                         hint: true,
                         highlight: true,
                         minLength: 1,
@@ -51,6 +51,7 @@
                             ].join('\n')
                         }
                     });
+            countriesTypeIO.makeSelection(null, {text: 'China', value: 'CHN'});
         });
     </script>
 </head>
